...
    uiState: MenuUiState,
    drawerState: DrawerState,
    onCloseDrawer: () -> Unit,
    scrollState: ScrollState,
    innerPadding: PaddingValues,
    onNavigateToNotifications: () -> Unit,
    showCloseSessionDialog: () -> Unit,
    navigateToPaymentMarketScreen: () -> Unit
) {

    if (drawerState.isOpen) {
        BackHandler {
            drawerViewModel.updateUserPreferences()
            onCloseDrawer()
        }
    }

    Column(
        modifier = Modifier
            .fillMaxSize().testTag("CONTENT_MAIN_MENU")
            .padding(innerPadding)
            .background(MaterialTheme.colorScheme.surface)
    ) {
        // Header
        UserProfileCard(
            userName = uiState.userName.ifEmpty { "Nombre vacío o error de red." },
...
                        modifier = Modifier
                            .weight(1f)
                            .verticalScroll(scrollState)
                    ) {

                        MenuOptionItem(
                            testTag = "MenuOptionItemProfile",
                            icon = Icons.Default.Person,
                            text = "Perfil",
                            onClick = { drawerViewModel.changeOptionsMenu(OptionsMenu.USER_PROFILE) },
                            drawable = R.drawable.ic_profile
                        )

                        MenuOptionItem(
                            testTag = "MenuOptionItemNotifications",
                            icon = Icons.Default.Favorite,
                            text = "Notificaciones",
                            onClick = { onNavigateToNotifications() },
                            drawable = R.drawable.ic_notificationsprofile
                        )

                        MenuOptionItem(
                            testTag = "MenuOptionItemSettings",
                            icon = Icons.Default.Settings,
                            text = "Configuración",
                            onClick = { drawerViewModel.changeOptionsMenu(OptionsMenu.USER_PREFERENCES_SCREEN) },
                            drawable = R.drawable.ic_configuracion
                        )

                        MenuOptionItem(
                            testTag = "MenuOptionItemMyPosts",
                            icon = Icons.Filled.Groups,
                            text = "Mis publicaciones",
                            onClick = { drawerViewModel.changeOptionsMenu(OptionsMenu.MY_POSTS_SCREEN) }
                        )

                        MenuOptionItem(
                            testTag = "MenuOptionItemPremium",
                            icon = Icons.Filled.Payment,
                            text = "HoloJam Premium",
                            onClick = { navigateToPaymentMarketScreen() }
                        )

                        MenuOptionItem(
...

                    }

                    // Sección inferior con "Cerrar sesión"
                    Column {
                        MenuOptionItem(
                            testTag = "MenuOptionItemCloseSession",
                            icon = Icons.AutoMirrored.Filled.ExitToApp,
                            text = stringResource(R.string.cerrar_sesion),
                            onClick = { showCloseSessionDialog() },
                            drawable = R.drawable.ic_logout
                        )
                        Spacer(modifier = Modifier.height(16.dp))
...
