...
        lifecycleOwner.lifecycle.addObserver(observer)

        onDispose {
            lifecycleOwner.lifecycle.removeObserver(observer)
        }
    }
    Box(modifier = Modifier.fillMaxSize().testTag("ProjectsScreen")) {
        LazyColumn(
            modifier = Modifier.fillMaxSize(),
            contentPadding = PaddingValues(
                bottom = bottomPadding + 80.dp
            ) // 80.dp aprox para FAB + margen
        ) {
...
            } else {
                uiState.allProjects
            }

            if (listToShow.isEmpty()) {
                item {
                    EmptyListMessage(
                        tab = uiState.tabSelected,
                        modifier = Modifier.padding(top = 48.dp).testTag("EmptyListMessage")
                    )
                }
            } else {
                items(listToShow) { project ->
...
                    viewModel.stopPlayback()
                    showCreateForm = true
                },
                modifier = Modifier
                    .align(Alignment.BottomEnd)
                    .padding(16.dp)
                    .padding(bottom = bottomPadding + 8.dp).testTag("AddProjectButton"),
                containerColor = MaterialTheme.colorScheme.primary,
                contentColor = MaterialTheme.colorScheme.onPrimary
            ) {
                Image(
                    painter = painterResource(id = R.drawable.ic_new_project_add), // nuevo png de add project
                    contentDescription = "Nuevo Proyecto",
...
            viewModel = viewModel,
            onDismiss = { projectToEdit = null }
        )
    }

    if (showCreateForm) {
        CreateProjectDialog(
            uiState = uiState,
            viewModel = viewModel,
            onDismiss = { showCreateForm = false /* viewModel.dismissCreateDialog() */ },
            onNavigateToManagement = {
                onNavigateToProjectManagementScreen()
            }
...
            onGoToPremium = onNavigateToPremium
        )
    }

    if (projectToDelete != null) {
        ShowConfirmationDialog(
            modifier = Modifier.testTag("DeleteProjectDialog"),
            show = true,
            onDismiss = { projectToDelete = null },
            onConfirm = {
                projectToDelete?.let {
                    viewModel.deleteProject(it.id)
                }
...
